--- a/data-analyst.html
+++ b/data-analyst.html
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/E37DF8FE70'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/E37DF8FE70'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -113,7 +113,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/payfit/a324c2b0-4b10-4eb3-9ec6-fa09c5c52785'>PayFit - Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/payfit/a324c2b0-4b10-4eb3-9ec6-fa09c5c52785'>PayFit - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -286,7 +286,7 @@ mobile studio, HARDlight. As part of the studio's Live Operations team, you woul
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theplumguide.recruitee.com/o/data-analyst'>Data Analyst - The Plum Guide</a></h5> 
+<h5><a href='https://theplumguide.recruitee.com/o/data-analyst'>Data Analyst - The Plum Guide</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Creating automated ways with the help of our data engineer to pipe data such as 
 targets and schedules. Building dashboards within Google Data Studio so our?...</p>
@@ -311,7 +311,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/valleyhealth/job/obeyafwR'>Valley Health Careers - Clinical Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/valleyhealth/job/obeyafwR'>Valley Health Careers - Clinical Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -422,12 +422,12 @@ Syosset, New York, United States ? Data Solutions. Description. ABOUT 605.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Marketing Acquistion Data Analyst at BDSwiss.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurobank.workable.com/j/094CAC131F?viewed=true'>Data Governance Business Analyst ... - Eurobank Ergasias SA - Jobs</a></h5> 
+<h5><a href='https://eurobank.workable.com/j/094CAC131F?viewed=true'>Data Governance Business Analyst ... - Eurobank Ergasias SA - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Governance Business Analyst at Eurobank 
 Ergasias SA.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://softheon.workable.com/jobs/1082139/candidates/new'>Marketing Data Analyst - Apply online - Softheon - Jobs</a></h5> 
+<h5><a href='https://softheon.workable.com/jobs/1082139/candidates/new'>Marketing Data Analyst - Apply online - Softheon - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Marketing Data Analyst at Softheon.</p>
 <hr/>
